--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-    "name": "files-pool",
+    "name": "filespool",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
     "scripts": {
         "start": "npm run build && NODE_ENV=production node dist/main.js",
+        "dev": "NODE_ENV=development nodemon main.ts",
         "build": "rimraf dist && tsc",
-        "dev": "NODE_ENV=development nodemon main.ts"
+        "build:exe": "pkg ."
     },
     "keywords": [],
     "author": "",
@@ -23,9 +24,20 @@
         "@types/localtunnel": "^2.0.1",
         "@types/node": "^18.16.3",
         "nodemon": "^2.0.22",
+        "pkg": "^5.8.1",
         "rimraf": "^5.0.0",
         "ts-node": "^10.9.1",
         "typescript": "^5.0.4",
         "win-node-env": "^0.6.1"
+    },
+    "bin": "./dist/main.js",
+    "pkg": {
+        "assets": "public/**/*",
+        "target": [
+            "node16-linux-x64",
+            "node16-mac-x64",
+            "node16-win-x64"
+        ],
+        "outputPath": "executable"
     }
 }
