--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
         "pkg": "^5.8.1",
         "rimraf": "^5.0.0",
         "ts-node": "^10.9.1",
-        "typescript": "^5.0.4",
-        "win-node-env": "^0.6.1"
+        "typescript": "^5.0.4"
     },
     "bin": "./dist/main.js",
     "pkg": {
