--- a/.github/workflows/executable.yaml
+++ b/.github/workflows/executable.yaml
@@ -15,6 +15,7 @@ jobs:
                   npm install
             - name: Build
               run: |
+                  npm run build
                   npm run build:exe
                   cp -r ./files ./executable
             - name: Push to gh-pages
