--- a/.github/workflows/executable.yaml
+++ b/.github/workflows/executable.yaml
@@ -18,9 +18,9 @@ jobs:
                   npm run build
                   npm run build:exe
                   cp -r ./files ./executable
-            - name: Push to gh-pages
+            - name: Push to executable branch
               uses: peaceiris/actions-gh-pages@v3
               with:
                   github_token: ${{ secrets.GH_TOKEN }}
-                  publish_dir: ./build
-                  publish_branch: gh-pages
+                  publish_dir: ./executable
+                  publish_branch: executable
