--- a/.github/workflows/executable.yaml
+++ b/.github/workflows/executable.yaml
@@ -5,22 +5,30 @@ on:
             - main
 
 jobs:
-    build:
+    build-exe:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout code
               uses: actions/checkout@v2
+              with:
+                  ref: main
             - name: Install Dependencies
               run: |
                   npm install
-            - name: Build
+            - name: Build executable
               run: |
                   npm run build
                   npm run build:exe
                   cp -r ./files ./executable
-            - name: Push to executable branch
-              uses: peaceiris/actions-gh-pages@v3
+                  git add executable/
+                  git reset -- $(git ls-files --others --exclude-standard)
+            - name: Commit changes
+              run: |
+                  git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+                  git config --local user.name "github-actions[bot]"
+                  git commit -m "Update executable"
+            - name: Push changes
+              uses: ad-m/github-push-action@master
               with:
                   github_token: ${{ secrets.GH_TOKEN }}
-                  publish_dir: ./executable
-                  publish_branch: executable
+                  branch: my-other-branch
