--- a/.github/workflows/executable.yaml
+++ b/.github/workflows/executable.yaml
@@ -23,8 +23,8 @@ jobs:
                   git add -f executable/*
             - name: Commit changes
               run: |
-                  git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-                  git config --local user.name "github-actions[bot]"
+                  git config --local user.email "${{ secrets.GH_EMAIL }}"
+                  git config --local user.name "${{ secrets.GH_USERNAME }}"
                   git commit -m "Update executable"
             - name: Push changes
               uses: ad-m/github-push-action@master
