--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "start": "npm run build && NODE_ENV=production node dist/main.js",
         "dev": "NODE_ENV=development nodemon main.ts",
         "build": "rimraf dist && tsc",
-        "build:exe": "node dist/build.js"
+        "build:exe": "ts-node build.ts"
     },
     "keywords": [],
     "author": "",
@@ -17,11 +17,10 @@
         "ejs": "^3.1.9",
         "express": "^4.18.2",
         "jszip": "^3.10.1",
-        "localtunnel": "^2.0.2"
+        "ngrok": "^4.3.3"
     },
     "devDependencies": {
         "@types/express": "^4.17.17",
-        "@types/localtunnel": "^2.0.1",
         "@types/node": "^18.16.3",
         "nodemon": "^2.0.22",
         "pkg": "^5.8.1",
@@ -32,7 +31,8 @@
     "bin": "./dist/main.js",
     "pkg": {
         "assets": [
-            "views/**/*"
+            "views/**/*",
+            "node_modules/ngrok/bin/*"
         ],
         "targets": [
             "node16-linux-x64",
