--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "ejs": "^3.1.9",
         "express": "^4.18.2",
         "jszip": "^3.10.1",
-        "ngrok": "^4.3.3"
+        "ngrok": "^4.3.3",
+        "range-parser": "^1.2.1"
     },
     "devDependencies": {
         "@types/express": "^4.17.17",
