--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "start": "npm run build && NODE_ENV=production node dist/main.js",
         "dev": "NODE_ENV=development nodemon main.ts",
         "build": "rimraf dist && tsc",
-        "build:exe": "ts-node build.ts"
+        "build:exe": "ts-node build.ts",
+        "test": "jest --verbose"
     },
     "keywords": [],
     "author": "",
@@ -22,10 +23,13 @@
     },
     "devDependencies": {
         "@types/express": "^4.17.17",
+        "@types/jest": "^29.5.1",
         "@types/node": "^18.16.3",
+        "husky": "^8.0.3",
         "nodemon": "^2.0.22",
         "pkg": "^5.8.1",
         "rimraf": "^5.0.0",
+        "ts-jest": "^29.1.0",
         "ts-node": "^10.9.1",
         "typescript": "^5.0.4"
     },
@@ -39,6 +43,21 @@
             "node16-linux-x64",
             "node16-mac-x64",
             "node16-win-x64"
+        ]
+    },
+    "jest": {
+        "transform": {
+            "^.+\\.(t|j)s$": "ts-jest"
+        },
+        "testEnvironment": "node",
+        "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+        "moduleFileExtensions": [
+            "ts",
+            "tsx",
+            "js",
+            "jsx",
+            "json",
+            "node"
         ]
     }
 }
