--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "main": "index.js",
     "scripts": {
         "start": "npm run build && NODE_ENV=production node dist/main.js",
-        "dev": "NODE_ENV=development nodemon main.ts",
-        "build": "rimraf dist && tsc",
+        "dev": "NODE_ENV=development nodemon src/main.ts",
+        "build": "rimraf dist && tsc --project tsconfig.json",
         "build:exe": "ts-node build.ts",
         "test": "jest --verbose",
         "prepare": "husky install"
